--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     .hero {
-      background-image: url('https://via.placeholder.com/1200x700'); /* Replace with real image */
+      background-image: url('https://github.com/yanivkf26-maker/Charity-Water-Project-Github/blob/main/Screenshot%202025-08-30%20233952.png'); /* Replace with real image */
       background-size: cover;
       background-position: center;
       height: 100vh;
