--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Charity: Water - Every Cent Counts</title>
+  <!-- Fonts: Proxima Nova and Avenir (system fallback) -->
   <style>
+    @import url('https://fonts.googleapis.com/css?family=Avenir:400,700&display=swap');
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
       color: white;
       background-color: #f0f0f0;
     }
 
     .hero {
-      background-image: url('https://github.com/yanivkf26-maker/Charity-Water-Project-Github/blob/main/Screenshot%202025-08-30%20233952.png'); /* Replace with real image */
+      background-image: url('https://github.com/yanivkf26-maker/Charity-Water-Project-Github/raw/main/Screenshot%202025-08-30%20233952.png');
       background-size: cover;
       background-position: center;
       height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: left;
       position: relative;
     }
 
@@ -31,41 +29,7 @@
       width: 100%;
       height: 100%;
       background: rgba(0, 0, 0, 0.5);
-    }
-
-    .content {
-      position: relative;
-      z-index: 2;
-      max-width: 600px;
-      padding: 20px;
-    }
-
-    .content h1 {
-      font-size: 2.5rem;
-      margin-bottom: 15px;
-      font-weight: bold;
-    }
-
-    .content p {
-      font-size: 1.1rem;
-      margin-bottom: 25px;
-    }
-
-    .cta-button {
-      background-color: #f4b400;
-      color: black;
-      padding: 15px 25px;
-      font-size: 1rem;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      text-decoration: none;
-      transition: background-color 0.3s;
-    }
-
-    .cta-button:hover {
-      background-color: #d39d00;
+      z-index: 1;
     }
 
     .logo {
@@ -76,10 +40,98 @@
       padding: 10px 15px;
       border-radius: 5px;
       font-weight: bold;
+      z-index: 3;
+      font-size: 1.2rem;
+      letter-spacing: 1px;
     }
-
     .logo span {
       color: #f4b400;
+    }
+
+    .content {
+      position: absolute;
+      top: 30px;
+      left: 15px;
+      z-index: 2;
+      max-width: 400px;
+      padding: 20px 24px 20px 20px;
+      text-align: left;
+      font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
+    }
+
+    .content h1 {
+      font-size: 2rem;
+      margin-bottom: 15px;
+      font-weight: bold;
+      color: white;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.55);
+      font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
+    }
+
+    .content p {
+      font-size: 1.1rem;
+      margin-bottom: 25px;
+      color: white;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+      font-family: 'Avenir', 'Proxima Nova', Arial, Helvetica, sans-serif;
+    }
+
+    .cta-button {
+      background-color: #f4b400;
+      color: black;
+      padding: 12px 20px;
+      font-size: 1rem;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color 0.3s;
+      margin-left: 0;
+      font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
+    }
+
+    .cta-button:hover {
+      background-color: #d39d00;
+    }
+
+    @media (max-width: 600px) {
+      .logo {
+        top: 12px;
+        right: 12px;
+        font-size: 1rem;
+        padding: 8px 12px;
+        max-width: 150px;
+      }
+      .content {
+        top: 10px;
+        left: 5px;
+        padding: 10px;
+        max-width: 90vw;
+      }
+      .content h1 {
+        font-size: 1.2rem;
+      }
+    }
+
+    /* Section styling for donate */
+    #donate {
+      background: #fff;
+      color: #333;
+      font-family: 'Avenir', 'Proxima Nova', Arial, Helvetica, sans-serif;
+    }
+    #donate h2,
+    #donate p {
+      color: #333;
+      font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
+    }
+    #donate .cta-button {
+      background: #f4b400;
+      color: black;
+    }
+    #donate .cta-button:hover {
+      background: #d39d00;
+      color: black;
     }
   </style>
 </head>
@@ -94,12 +146,12 @@
 
     <div class="content">
       <h1>Every cent counts and funds real change</h1>
-      <p>Our 100% model, every part of your donation goes straight to our beneficiaries.</p>
+      <p>Our 100% model ensures that every part of your donation goes straight to our beneficiaries.</p>
       <a href="#donate" class="cta-button">Donate Now</a>
     </div>
   </div>
 
-  <section id="donate" style="padding:50px; text-align:center; background:#fff; color:#333;">
+  <section id="donate" style="padding:50px; text-align:center;">
     <h2>Make a Difference Today</h2>
     <p>Your support brings clean and safe water to communities in need.</p>
     <a href="#" class="cta-button">Give Water</a>
