--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
       background-image: url('https://github.com/yanivkf26-maker/Charity-Water-Project-Github/raw/main/Screenshot%202025-08-30%20233952.png');
       background-size: cover;
       background-position: center;
-      height: 100vh;
+      min-height: 100vh;
       position: relative;
+      width: 100vw;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
     }
 
     .overlay {
@@ -30,6 +34,7 @@
       height: 100%;
       background: rgba(0, 0, 0, 0.5);
       z-index: 1;
+      pointer-events: none;
     }
 
     .logo {
@@ -43,6 +48,7 @@
       z-index: 3;
       font-size: 1.2rem;
       letter-spacing: 1px;
+      white-space: nowrap;
     }
     .logo span {
       color: #f4b400;
@@ -54,6 +60,7 @@
       left: 15px;
       z-index: 2;
       max-width: 400px;
+      width: calc(100vw - 30px);
       padding: 20px 24px 20px 20px;
       text-align: left;
       font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
@@ -66,6 +73,7 @@
       color: white;
       text-shadow: 2px 2px 6px rgba(0,0,0,0.55);
       font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
+      word-break: break-word;
     }
 
     .content p {
@@ -74,6 +82,7 @@
       color: white;
       text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
       font-family: 'Avenir', 'Proxima Nova', Arial, Helvetica, sans-serif;
+      word-break: break-word;
     }
 
     .cta-button {
@@ -89,41 +98,31 @@
       transition: background-color 0.3s;
       margin-left: 0;
       font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
+      display: inline-block;
+      margin-bottom: 8px;
+      white-space: nowrap;
     }
 
     .cta-button:hover {
       background-color: #d39d00;
     }
 
-    @media (max-width: 600px) {
-      .logo {
-        top: 12px;
-        right: 12px;
-        font-size: 1rem;
-        padding: 8px 12px;
-        max-width: 150px;
-      }
-      .content {
-        top: 10px;
-        left: 5px;
-        padding: 10px;
-        max-width: 90vw;
-      }
-      .content h1 {
-        font-size: 1.2rem;
-      }
-    }
-
-    /* Section styling for donate */
+    /* Donate section styles */
     #donate {
       background: #fff;
       color: #333;
       font-family: 'Avenir', 'Proxima Nova', Arial, Helvetica, sans-serif;
+      padding: 50px 20px;
+      text-align: center;
+      box-sizing: border-box;
+      width: 100vw;
+      max-width: 100%;
     }
     #donate h2,
     #donate p {
       color: #333;
       font-family: 'Proxima Nova', 'Avenir', Arial, Helvetica, sans-serif;
+      word-break: break-word;
     }
     #donate .cta-button {
       background: #f4b400;
@@ -132,6 +131,68 @@
     #donate .cta-button:hover {
       background: #d39d00;
       color: black;
+    }
+
+    /* Responsive styles */
+    @media (max-width: 900px) {
+      .content {
+        max-width: 60vw;
+        padding: 16px;
+        font-size: 1rem;
+      }
+      .logo {
+        font-size: 1rem;
+        padding: 8px 12px;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .logo {
+        top: 10px;
+        right: 10px;
+        font-size: 0.95rem;
+        padding: 7px 10px;
+        max-width: 80vw;
+      }
+      .content {
+        top: 10px;
+        left: 5px;
+        right: 5px;
+        width: calc(100vw - 15px);
+        padding: 10px;
+        max-width: 96vw;
+        font-size: 0.95rem;
+      }
+      .content h1 {
+        font-size: 1.25rem;
+      }
+      .content p {
+        font-size: 1rem;
+      }
+      #donate {
+        padding: 28px 8px;
+      }
+      #donate h2 {
+        font-size: 1.1rem;
+      }
+      #donate p {
+        font-size: 1rem;
+      }
+    }
+
+    @media (max-width: 400px) {
+      .content {
+        padding: 4px;
+        left: 2px;
+        top: 2px;
+        max-width: 98vw;
+      }
+      .logo {
+        top: 6px;
+        right: 4px;
+        font-size: 0.9rem;
+        padding: 6px 6px;
+      }
     }
   </style>
 </head>
@@ -151,7 +212,7 @@
     </div>
   </div>
 
-  <section id="donate" style="padding:50px; text-align:center;">
+  <section id="donate">
     <h2>Make a Difference Today</h2>
     <p>Your support brings clean and safe water to communities in need.</p>
     <a href="#" class="cta-button">Give Water</a>
